--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 body {
+  --mainColor: #00abff;
   --mainBackgroundColor: #121212;
   --mainForegroundColor: rgba(195,195,195,0.878431);
   --submenuColor: #272727;
@@ -19,4 +20,7 @@ body {
 }
 .header[_ngcontent-ale-c0]{
   background-color: var(--menuBackgroundColor);
+}
+.upload-button[_ngcontent-yeo-c2]{
+ color: var(--inputColor) !important; 
 }
