change css search bar

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@ body {
   /*font-family: "Open Sans",sans-serif;*/
 }
 
+#search-video{
+  background: var(--mainBackgroundColor) !important;
+}
+
 .dropdown-menu{
   background-color: var(--menuBackgroundColor);
   color: var(--menuForegroundColor);
