Adding pagination styles

--- a/assets/style.css
+++ b/assets/style.css
@@ -262,6 +262,6 @@ p-multiselect .pi.pi-chevron-down::after{
 
 /* Pagination */
 #custom-css .ui-paginator .ui-paginator-element:hover:not(.ui-state-disabled){
-  color: var(--whiteColor);
-  background-color: var(--mainHoverColor);
+  color: var(--whiteColor) !important;
+  background-color: var(--mainHoverColor) !important;
 }
