--- a/assets/style.css
+++ b/assets/style.css
@@ -172,6 +172,10 @@ body {
   color: var(--mainForegroundColor) !important;
   border: 1px solid var(--mainBackgroundColor);
 }
+#custom-css .ng-select .ng-input>input{
+  background: none !important;
+  border: 0 !important;
+}
 #custom-css .am-donate-main .button input{
   color: var(--mainColor) !important;
   background: var(--whiteColor) !important;
